--- a/index.html
+++ b/index.html
@@ -1,2 +1,37 @@
-hello
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Sample Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            text-align: center;
+            margin-top: 50px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        .container {
+            background-color: #fff;
+            padding: 30px;
+            margin: auto;
+            width: 50%;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 8px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to My Sample Website</h1>
+        <p>This page is served by Apache HTTPD running in a container.</p>
+        <p>Jenkins + Podman pipeline is working!</p>
+    </div>
+</body>
+</html>
