--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Sample Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            text-align: center;
-            margin-top: 50px;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            color: #666;
-        }
-        .container {
-            background-color: #fff;
-            padding: 30px;
-            margin: auto;
-            width: 50%;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            border-radius: 8px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Category Filter Example</title>
+<style>
+  .item { display: none; margin: 5px 0; }
+  button { margin-right: 5px; }
+</style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to My Sample Website</h1>
-        <p>This page is served by Apache HTTPD running in a container.</p>
-        <p>Jenkins + Podman pipeline is working!</p>
-    </div>
+
+<h2>Choose Category</h2>
+<div>
+  <button onclick="showCategory('all')">All</button>
+  <button onclick="showCategory('movies')">Movies</button>
+  <button onclick="showCategory('tv')">TV</button>
+  <button onclick="showCategory('sports')">Sports</button>
+</div>
+
+<div id="content">
+  <div class="item movies">Avengers: Endgame</div>
+  <div class="item movies">Inception</div>
+  <div class="item tv">Friends</div>
+  <div class="item tv">Breaking Bad</div>
+  <div class="item sports">Cricket Match 2025</div>
+  <div class="item sports">Football Finals</div>
+</div>
+
+<script>
+function showCategory(category) {
+  let items = document.querySelectorAll('#content .item');
+  items.forEach(item => {
+    item.style.display = (category === 'all' || item.classList.contains(category)) ? 'block' : 'none';
+  });
+}
+// Show all items by default
+showCategory('all');
+</script>
+
 </body>
 </html>
