--- a/movies.html
+++ b/movies.html
@@ -12,5 +12,8 @@
 <div class="item">Avengers: Endgame</div>
 <div class="item">Inception</div>
 
+<!-- Back button -->
+<button onclick="window.location.href='index.html'">Back</button>
+
 </body>
 </html>
