--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Category Home</title>
+<title>Hotstar Clone</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h2>Choose Category</h2>
+<header>Hotstar Clone</header>
+
 <div class="tabs">
   <button onclick="goCategory('movies')">Movies</button>
   <button onclick="goCategory('tv')">TV</button>
@@ -17,8 +18,7 @@
 
 <script>
 function goCategory(category) {
-  // Navigate to category page in the same tab
-  window.location.href = category + '.html';
+    window.location.href = category + '.html';
 }
 </script>
 
