--- a/movies.html
+++ b/movies.html
@@ -8,12 +8,20 @@
 </head>
 <body>
 
-<h2>Movies</h2>
-<div class="item">Avengers: Endgame</div>
-<div class="item">Inception</div>
+<header>Movies</header>
 
-<!-- Back button -->
-<button onclick="window.location.href='index.html'">Back</button>
+<div class="container">
+    <div class="item">
+        <img src="images/avengers.jpg" alt="Avengers">
+        <h3>Avengers: Endgame</h3>
+    </div>
+    <div class="item">
+        <img src="images/inception.jpg" alt="Inception">
+        <h3>Inception</h3>
+    </div>
+</div>
+
+<button class="back-btn" onclick="window.location.href='index.html'">Back</button>
 
 </body>
 </html>
